// Fix header elements spacing

--- a/admin-dev/themes/default/sass/partials/_header.sass
+++ b/admin-dev/themes/default/sass/partials/_header.sass
@@ -236,6 +236,7 @@ $header-height: 36px
 	@extend .hidden-sm
 	height:     $header-height
 	box-sizing: border-box
+	margin: 0 10px !important
 	li
 		> a
 			&.notifs
